# api/routes/countries.js
@@ -5,22 +5,24 @@ const db = require('../db');
 const router = new Router();
 
 router.get('/', async (req, res) => {
-  const query = 'select count (*) as reports_number' +
-      ', r.country_code' +
-      ', count(*) /  (select population / 10000 from country_population where country_population.country_code = r.country_code) as tpr' +
-      ' from reports r' +
-      ' where  r.country_code is not null' +
-      ' group by r.country_code order by tpr desc NULLS  LAST;';
-  const { rows } = await db.query(query);
+  const query = 'select * from country_population order by country_code;'
+  const {rows} = await db.query(query);
+  const queryResources = 'select * from country_resource;'
+  const resourcesResult = await db.query(queryResources);
   res.send({
     'status': 'SUCCESS',
-      'sources': rows.map(v => {
-          return { 
-            "count": v["reports_number"],
-            "country_code": v["country_code"],
-            "tpr": v["tpr"]
-          };
-      })
+    'sources': rows.map(v => {
+      return {
+        "country_code": v["country_code"],
+        "population": v["population"],
+        "reports_number": v["reportsqnt"],
+        "tpr": v["reportsqnt"]/(v["population"]/10000),
+        "resources": resourcesResult.rows.filter(o => o.country_code == v["country_code"]).map(n => {
+          return  {
+            "resourceName": n["resourcename"]};
+        })
+      };
+    })
   })
 });
 
