# api/routes/swagger.json
@@ -10,7 +10,7 @@
     {
       "url": "localhost:3000",
       "description": "Local developer server"
-    }, 
+    },
     {
        "url": "opendata.letsdoitworld.org",
        "description": "Production server"
@@ -28,6 +28,84 @@
              "description": "OK",
              "schema": {
                "$ref": "#/definitions/sources"
+             }
+           }
+         }
+       }
+     },
+     "/countries": {
+       "get": {
+         "operationId": "getCountryData",
+         "tags": ["Trash report countries"],
+         "description": "Get the list of trash report countries with population, number of reports, calculated tpr index and resource names",
+         "responses": {
+           "200": {
+             "description": "OK",
+             "schema": {
+               "$ref": "#/definitions/countries"
+             }
+           }
+         }
+       }
+     },
+     "/reportsbyparam": {
+       "get": {
+         "operationId": "getReportsData",
+         "tags": ["Trash reports"],
+         "description": "Get the list of trash reports with an option to use request parameters (code, createdby, start, end, startrecord, maxrec) to filter the results",
+         "parameters": [
+           {
+             "name": "code",
+             "in": "query",
+             "description": "2-letter ISO code of the country",
+             "type": "string",
+             "maximum": 1
+           },
+           {
+             "name": "createdby",
+             "in": "query",
+             "description": "Name of the report resource",
+             "type": "string",
+             "maximum": 1
+           },
+           {
+             "name": "start",
+             "in": "query",
+             "description": "Starting from this date(when report has last update) filter the reports (UTC)",
+             "type": "date",
+             "format": "yyyy-mm-dd",
+             "maximum": 1
+           },
+           {
+             "name": "end",
+             "in": "query",
+             "description": "Filter the reports until this date(when report has last update) (UTC)",
+             "type": "date",
+             "format": "yyyy-mm-dd",
+             "maximum": 1
+           },
+           {
+             "name": "startrecord",
+             "in": "query",
+             "description": "Serial number of report record from which the filter result start",
+             "type": "integer",
+             "format": "int32",
+             "maximum": 1
+           },
+           {
+             "name": "end",
+             "in": "query",
+             "description": "Maximum number of reports returned by request",
+             "type": "integer",
+             "format": "int32",
+             "maximum": 1
+           }
+         ],
+         "responses": {
+           "200": {
+             "description": "OK",
+             "schema": {
+               "$ref": "#/definitions/reportsbyparam"
              }
            }
          }
@@ -112,6 +190,7 @@
          }
        }
      },
+
      "/reports/{platformId}" : {
       "put": {
         "operationId": "updateReportByPlatformId",
@@ -208,9 +287,9 @@
            "401": {
             "$ref": "#/responses/401"
            }
-        }        
+        }
       }
-    }    
+    }
    },
    "responses": {
       "401": {
@@ -286,7 +365,7 @@
           "$ref": "#/definitions/reportStatus"
         }
         ]
-    },     
+    },
     "reports": {
         "allOf": [
           {
@@ -332,6 +411,161 @@
         }
       }
     },
+     "countrydata": {
+       "type": "object",
+       "properties": {
+         "country_code": {
+           "type": "string",
+           "description": " Country ISO Alpha-2 code."
+         },
+         "population": {
+           "type": "string",
+           "description": "Population of the country."
+         },
+         "reports_number": {
+           "type": "string",
+           "description": "Number of trash reports in particular country."
+         },
+         "tpr": {
+           "type": "string",
+           "description": "Trash point report index calculated for the country."
+         },
+         "resources": {
+           "type": "array",
+           "items": {
+             "$ref": "#/definitions/resourcedata"
+           }
+         }
+       }
+     },
+     "trashpoint": {
+       "type": "object",
+       "properties": {
+         "id": {
+           "type": "integer",
+           "description": " Trashpoint/report id number."
+         },
+         "type": {
+           "type": "string",
+           "description": "Trashpoint resorce name."
+         },
+         "lat": {
+           "type": "float",
+           "description": "Trashpoint latitude."
+         },
+         "ts_imported": {
+           "type": "date",
+           "description": "Timestamp when trashpoint was imported to opendata."
+         },
+         "source_id": {
+           "type": "string",
+           "description": "Trashpoint initial source id number."
+         },
+         "country": {
+           "type": "integer",
+           "description": " Trashpoint country."
+         },
+         "admin_area": {
+           "type": "string",
+           "description": "Trashpoint address."
+         },
+         "admin_sub_area": {
+           "type": "string",
+           "description": "Trashpoint detailed address."
+         },
+         "locality": {
+           "type": "string",
+           "description": "Trashpoint nearest location point."
+         },
+         "status": {
+           "type": "string",
+           "description": "Trashpoint current status."
+         },
+         "household": {
+           "type": "boolean",
+           "description": "Defines if trash is household type."
+         },
+         "construction": {
+           "type": "boolean",
+           "description": "Defines if trash is construction type."
+         },
+         "hazardous": {
+           "type": "boolean",
+           "description": "Defines if trash is hazardous."
+         },
+         "bulky": {
+           "type": "boolean",
+           "description": "Defines if trash is bulky."
+         },
+         "litter": {
+           "type": "boolean",
+           "description": "Defines if trash is bulky."
+         },
+         "uncategorized": {
+           "type": "boolean",
+           "description": "Defines if trash is uncategorized."
+         },
+         "glass": {
+           "type": "boolean",
+           "description": " Defines if trash is glass."
+         },
+         "plastic": {
+           "type": "boolean",
+           "description": "Defines if trash is plastic."
+         },
+         "textile": {
+           "type": "boolean",
+           "description": "Defines if trash is textile."
+         },
+         "lumber": {
+           "type": "boolean",
+           "description": "Defines if trash is lumber."
+         },
+         "metal": {
+           "type": "boolean",
+           "description": "Defines if trash is metal."
+         },
+         "rubber": {
+           "type": "boolean",
+           "description": " Defines if trash is rubber."
+         },
+         "other": {
+           "type": "boolean",
+           "description": "Defines if trash is of some other type"
+         },
+         "created_at": {
+           "type": "date",
+           "description": "Date then trashreport was created"
+         },
+         "created_by": {
+           "type": "string",
+           "description": "The way how trashreport was imported to opendata"
+         },
+         "country_code": {
+           "type": "integer",
+           "description": " Country code of trashpoint location country"
+         },
+         "last_updated": {
+           "type": "string",
+           "description": "Date when the report was updated"
+         },
+         "full_count": {
+           "type": "string",
+           "description": "Number of trash reports filtered by query."
+         }
+
+       }
+     },
+
+     "resourcedata": {
+       "type": "object",
+       "properties": {
+         "resource_name": {
+           "type": "string",
+           "description": " Name of the resource."
+         }
+       }
+     },
     "sources": {
         "allOf": [
           {
@@ -350,6 +584,42 @@
          }
        ]
     },
+     "countries": {
+       "allOf": [
+         {
+           "$ref": "#/definitions/status"
+         },
+         {
+           "type": "object",
+           "properties" : {
+             "sources": {
+               "type": "array",
+               "items": {
+                 "$ref": "#/definitions/countrydata"
+               }
+             }
+           }
+         }
+       ]
+     },
+     "reportsbyparam": {
+       "allOf": [
+         {
+           "trashpoints_total": "#/definitions/trashpoints_total"
+         },
+         {
+           "type": "object",
+           "properties" : {
+             "sources": {
+               "type": "array",
+               "items": {
+                 "$ref": "#/definitions/trashpoint"
+               }
+             }
+           }
+         }
+       ]
+     },
     "credentials": {
       "type": "object",
       "properties": {
@@ -431,6 +701,15 @@
           "description": "Status of the operation"
         }
       }
-    } 
+    },
+     "trashpoints_total": {
+       "type": "object",
+       "properties": {
+         "status": {
+           "type": "integer",
+           "description": "Total number of returned trashpoints/reports"
+         }
+       }
+     }
   }
 }
